# taskforge

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
android/: settings.gradle
android/app/: build.gradle
kategorie/: fizyka.json
plans/: adaptacja-standardow.md  tailwind-migration.md
podstawa programowa/: fizyka_klasa_7_szkola_podstawowa.json  fizyka_klasa_8_szkola_podstawowa.json  fizyka_liceum_klasa_1_zakres_podstawowy.json  fizyka_liceum_klasa_1_zakres_rozszerzony.json  fizyka_liceum_klasa_2_zakres_podstawowy.json  fizyka_liceum_klasa_2_zakres_rozszerzony.json  fizyka_liceum_klasa_3_zakres_podstawowy.json  fizyka_liceum_klasa_3_zakres_rozszerzony.json  fizyka_liceum_klasa_4_zakres_rozszerzony.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx
src/components/: AITaskGenerator.tsx  CategoryManager.tsx  CategoryPicker.tsx  CategoryTreeNode.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DownloadPage.tsx  ExportImport.tsx  FontSizeToggle.tsx  ModelPicker.tsx  OverflowMenu.tsx  Pagination.tsx  ProgramBaseViewer.tsx  ProgramPointPicker.tsx  RandomizerPanel.tsx  Settings.tsx  TaskEditor.tsx  TaskList.tsx  TestGenerator.tsx  ThemeToggle.tsx  Toaster.tsx
src/db/: categoryParser.ts  index.ts  (+3 more)
(+84 files in other folders)
